made adjustments to fix contrast between text and busy background, added link to linkedin account

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   padding-top: 60px;
   position: relative;
   font-family: Arial, sans-serif;
-  color: black;
+  color: #ffffff;
 }
 
 body::before {
@@ -26,7 +26,8 @@ body::before {
 .home {
   z-index: 10;
   text-align: center;
-  color: #fff;
+  color: #ffffff;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
   padding: 20px;
   margin-top: 60px;
 }
@@ -44,6 +45,13 @@ section {
   margin-bottom: 20px;
   padding: 20px;
   border-radius: 5px;
+  background: rgba(255, 255, 255, 0.1);
+  color: #ffffff;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+}
+
+.home section {
+  background: none;
 }
 
 ul {
@@ -52,10 +60,11 @@ ul {
 }
 
 footer {
-  color: #fff;
+  color: #ffffff;
   text-align: center;
   padding: 10px;
   width: 100%;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
 .footer-container {
@@ -77,7 +86,7 @@ a {
 }
 
 a:hover {
-  color: white;
+  color: #000000;
 }
 
 nav {
@@ -142,6 +151,8 @@ nav li:first-child {
 
 .sidebar a {
   padding: 10px;
+  color: #ffffff;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
 .menu-button {
@@ -162,6 +173,8 @@ nav li:first-child {
   background: rgba(255, 255, 255, 0.1);
   border-radius: 10px;
   margin: 5px;
+  color: #ffffff;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
 .skill-grid {
@@ -183,6 +196,8 @@ nav li:first-child {
 p,
 .home {
   font-family: monospace;
+  color: #ffffff;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
 div p {
@@ -194,10 +209,20 @@ div p {
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background: rgba(255, 255, 255, 0.1);
+  color: #ffffff;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
 #contact h2 {
   margin-bottom: 20px;
+}
+
+#contact img {
+  width: 90px;
+  height: 90px;
+  padding: 5px;
+  border-radius: 10px;
 }
 
 form {
@@ -206,6 +231,8 @@ form {
   border: 1px solid #ccc;
   border-radius: 5px;
   padding: 20px;
+  background: rgba(255, 255, 255, 0.1);
+  color: #ffffff;
 }
 
 form div {
@@ -228,6 +255,7 @@ form textarea {
   background-color: #eaeef3;
   font-style: italic;
   font-size: 15px;
+  color: #000000;
 }
 
 form button {
